--- a/sass/main.css
+++ b/sass/main.css
@@ -4,7 +4,6 @@
   list-style: none;
   box-sizing: border-box;
   text-decoration: none;
-  background-color: rgba(50, 139, 50, 0.247);
 }
 
 .container {
@@ -13,12 +12,114 @@
   padding: 0 15px;
 }
 
-.block {
-  width: 700px;
-  height: 600px;
-  background-color: red;
+header {
+  background-color: #BB2339;
 }
 
-h1 {
-  font-size: 100px;
+.hero {
+  padding: 80px 0 237px 0;
+  display: flex;
+  justify-content: space-between;
+}
+@media (max-width: 1125px) {
+  .hero {
+    flex-direction: column;
+    align-items: center;
+    row-gap: 40px;
+    padding: 40px 0 100px 0;
+  }
+}
+.hero__left {
+  max-width: 555px;
+}
+@media (max-width: 1125px) {
+  .hero__left {
+    text-align: center;
+  }
+}
+@media (max-width: 435px) {
+  .hero__left {
+    text-align: start;
+  }
+}
+.hero__left__span {
+  font-weight: 700;
+  font-size: 23px;
+  line-height: 130%;
+  letter-spacing: 0.04em;
+  text-transform: capitalize;
+  color: #FFFFFF;
+}
+.hero__left__title {
+  font-weight: 700;
+  font-size: 90px;
+  line-height: 130%;
+  letter-spacing: 0.04em;
+  text-transform: capitalize;
+  color: #FFFFFF;
+}
+@media (max-width: 1125px) {
+  .hero__left__title {
+    font-size: 74px;
+  }
+}
+@media (max-width: 435px) {
+  .hero__left__title {
+    font-size: 59px;
+  }
+}
+.hero__left__text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 175%;
+  letter-spacing: 0.04em;
+  color: #FFFFFF;
+  opacity: 0.7;
+}
+.hero__left__btn {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 175%;
+  letter-spacing: 0.04em;
+  color: #FFFFFF;
+  padding: 8px 32px;
+  background: none;
+  border: 1px solid #FFFFFF;
+  border-radius: 100px;
+  margin-top: 40px;
+  transition: 0.3s;
+}
+.hero__left__btn:hover {
+  border: 2px solid #BB2339;
+  transform: scale(1.1);
+  color: #BB2339;
+  cursor: pointer;
+  background-color: #FFFFFF;
+}
+.hero__img {
+  width: 720px;
+  height: 604px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 5px 0px;
+     object-position: 5px 0px;
+}
+@media (max-width: 725px) {
+  .hero__img {
+    display: none;
+  }
+}
+.hero__img2 {
+  display: none;
+}
+@media (max-width: 725px) {
+  .hero__img2 {
+    display: block;
+    width: 345px;
+    height: 288px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: 5px 0px;
+       object-position: 5px 0px;
+  }
 }/*# sourceMappingURL=main.css.map */
