--- a/sass/main.css
+++ b/sass/main.css
@@ -4,7 +4,6 @@
   list-style: none;
   box-sizing: border-box;
   text-decoration: none;
-  background-color: rgba(50, 139, 50, 0.247);
 }
 
 .container {
@@ -21,4 +20,58 @@
 
 h1 {
   font-size: 100px;
+}
+
+.Happy-customers {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  background-color: #F4F4F4;
+}
+
+.Happy-customers__title {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-bottom: 60px;
+}
+
+.Happy-customers__title__h5 {
+  padding-bottom: 10px;
+}
+
+.Happy-customers__cards {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 25px;
+       column-gap: 25px;
+}
+@media (max-width: 992px) {
+  .Happy-customers__cards {
+    flex-direction: column;
+    row-gap: 40px;
+    align-items: center;
+  }
+}
+
+.Happy-customers__cards__card {
+  max-width: 410px;
+  background: #FFFFFF;
+  border: 1px solid rgba(51, 51, 51, 0.1);
+  border-radius: 10px;
+  padding: 30px 50px 20px 30px;
+}
+
+.Happy-customers__cards__card__h3 {
+  padding-bottom: 10px;
+}
+
+.Happy-customers__cards__card__p {
+  padding-bottom: 21px;
+}
+
+.Happy-customers__img {
+  display: flex;
+  justify-content: center;
+  padding-top: 40px;
 }/*# sourceMappingURL=main.css.map */
