--- a/sass/main.css
+++ b/sass/main.css
@@ -4,7 +4,6 @@
   list-style: none;
   box-sizing: border-box;
   text-decoration: none;
-  background-color: rgba(50, 139, 50, 0.247);
 }
 
 .container {
@@ -13,12 +12,50 @@
   padding: 0 15px;
 }
 
-.block {
-  width: 700px;
-  height: 600px;
-  background-color: red;
+.media__img {
+  max-width: 100px;
+  min-height: 200px;
 }
 
-h1 {
-  font-size: 100px;
+.media-page {
+  background-image: url(../images/media-bg.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  max-width: 100%;
+  height: 763px;
+  position: relative;
+}
+
+.media-page iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -2;
+}
+
+.media {
+  padding: 77px 0;
+  height: 763px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.media__logo {
+  align-self: flex-start;
+}
+.media__photo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid red;
+  border-radius: 50%;
+  height: 120px;
+  width: 120px;
+  cursor: pointer;
+  margin: 0 auto;
+}
+
+.media__label-input:checked ~ .media-page iframe {
+  z-index: 1;
 }/*# sourceMappingURL=main.css.map */
