--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,6 @@
     list-style: none;
     box-sizing: border-box;
     text-decoration: none;
-    background-color: rgba(50, 139, 50, 0.247);
 }
 
 .container {
@@ -16,15 +15,9 @@
     margin: 0 auto;
     padding: 0 15px;
 }
-
-.block {
-    width: 700px;
-    height: 600px;
-    background-color: red;
-}
-
-h1 {
-    font-size: 100px
+.media__img {
+    max-width: 100px;
+    min-height: 200px
 }
 
 @import './all-blocks/all-blocks';
