--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,19 @@
     list-style: none;
     box-sizing: border-box;
     text-decoration: none;
-    background-color: rgba(50, 139, 50, 0.247);
+
+}
+
+ul{
+    li{
+        list-style: none;
+    }
+
+    
+}
+
+a{
+    text-decoration: none;
 }
 
 .container {
@@ -21,10 +33,6 @@
     width: 700px;
     height: 600px;
     background-color: red;
-}
-
-h1 {
-    font-size: 100px
 }
 
 @import './all-blocks/all-blocks';
